# eb-corbos-safetyapps-platform-evaluation

./: .gitignore  README.md  setup.md
scenarios/scenario1/: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  cpu_workload.cpp  io_workload.cpp  memory_workload.cpp  misbehaving_app.cpp  speedometer.cpp
scenarios/scenario1/common/: common.h
scenarios/scenario1/experiments/: s1_orchestrator.sh  s1_plots.py
scenarios/scenario1/experiments/results/10hz/2026-04-27_16:00:47/S0_baseline/: run_01.txt  run_02.txt  run_03.txt  run_04.txt  run_05.txt  run_06.txt  run_07.txt  run_08.txt  run_09.txt  run_10.txt
scenarios/scenario1/experiments/results/10hz/2026-04-27_16:00:47/S1_cpu/: run_01.txt  run_02.txt  run_03.txt  run_04.txt  run_05.txt  run_06.txt  run_07.txt  run_08.txt  run_09.txt  run_10.txt
scenarios/scenario1/experiments/results/10hz/2026-04-27_16:00:47/S2_cache/: run_01.txt  run_02.txt  run_03.txt  run_04.txt  run_05.txt  run_06.txt  run_07.txt  run_08.txt  run_09.txt  run_10.txt
scenarios/scenario1/experiments/results/10hz/2026-04-27_16:00:47/S3_stream/: run_01.txt  run_02.txt  run_03.txt  run_04.txt  run_05.txt  run_06.txt  run_07.txt  run_08.txt  run_09.txt  run_10.txt
scenarios/scenario1/experiments/results/10hz/2026-04-27_16:00:47/S4_io/: run_01.txt  run_02.txt  run_03.txt  run_04.txt  run_05.txt  run_06.txt  run_07.txt  run_08.txt  run_09.txt  run_10.txt
scenarios/scenario1/experiments/results/10hz/2026-04-27_16:00:47/S5_worst_case/: run_01.txt  run_02.txt  run_03.txt  run_04.txt  run_05.txt  run_06.txt  run_07.txt  run_08.txt  run_09.txt  run_10.txt
scenarios/scenario1/experiments/results/10hz/2026-04-28_10:21:05/S0_baseline/: run_01.txt  run_02.txt  run_03.txt  run_04.txt  run_05.txt  run_06.txt  run_07.txt  run_08.txt  run_09.txt  run_10.txt
scenarios/scenario1/experiments/results/10hz/2026-04-28_10:21:05/S1_cpu/: run_01.txt  run_02.txt  run_03.txt  run_04.txt  run_05.txt  run_06.txt  run_07.txt  run_08.txt  run_09.txt  run_10.txt
scenarios/scenario1/experiments/results/10hz/2026-04-28_10:21:05/S2_cache/: run_01.txt  run_02.txt  run_03.txt  run_04.txt  run_05.txt  run_06.txt  run_07.txt  run_08.txt  run_09.txt  run_10.txt
scenarios/scenario1/experiments/results/10hz/2026-04-28_10:21:05/S3_stream/: run_01.txt  run_02.txt  run_03.txt  run_04.txt  run_05.txt  run_06.txt  run_07.txt  run_08.txt  run_09.txt  run_10.txt
scenarios/scenario1/experiments/results/10hz/2026-04-28_10:21:05/S4_io/: run_01.txt  run_02.txt  run_03.txt  run_04.txt  run_05.txt  run_06.txt  run_07.txt  run_08.txt  run_09.txt  run_10.txt
scenarios/scenario1/experiments/results/10hz/2026-04-28_10:21:05/S5_worst_case/: run_01.txt  run_02.txt  run_03.txt  run_04.txt  run_05.txt  run_06.txt  run_07.txt  run_08.txt  run_09.txt  run_10.txt
scenarios/scenario1/experiments/results/20hz/2026-04-08_08:20:00/S0_baseline/: run_01.txt  run_02.txt  run_03.txt  run_04.txt  run_05.txt  run_06.txt  run_07.txt  run_08.txt  run_09.txt  run_10.txt
scenarios/scenario1/experiments/results/20hz/2026-04-08_08:20:00/S1_cpu/: run_01.txt  run_02.txt  run_03.txt  run_04.txt  run_05.txt  run_06.txt  run_07.txt  run_08.txt  run_09.txt  run_10.txt
scenarios/scenario1/experiments/results/20hz/2026-04-08_08:20:00/S2_cache/: run_01.txt  run_02.txt  run_03.txt  run_04.txt  run_05.txt  run_06.txt  run_07.txt  run_08.txt  run_09.txt  run_10.txt
scenarios/scenario1/experiments/results/20hz/2026-04-08_08:20:00/S3_stream/: run_01.txt  run_02.txt  run_03.txt  run_04.txt  run_05.txt  run_06.txt  run_07.txt  run_08.txt  run_09.txt  run_10.txt
scenarios/scenario1/experiments/results/20hz/2026-04-08_08:20:00/S4_io/: run_01.txt  run_02.txt  run_03.txt  run_04.txt  run_05.txt  run_06.txt  run_07.txt  run_08.txt  run_09.txt  run_10.txt
scenarios/scenario1/experiments/results/20hz/2026-04-08_08:20:00/S5_worst_case/: run_01.txt  run_02.txt  run_03.txt  run_04.txt  run_05.txt  run_06.txt  run_07.txt  run_08.txt  run_09.txt  run_10.txt
scenarios/scenario1/experiments/results/20hz/2026-04-16_16:42:34/S0_baseline/: run_01.txt  run_02.txt  run_03.txt  run_04.txt  run_05.txt  run_06.txt  run_07.txt  run_08.txt  run_09.txt  run_10.txt
scenarios/scenario1/experiments/results/20hz/2026-04-16_16:42:34/S1_cpu/: run_01.txt  run_02.txt  run_03.txt  run_04.txt  run_05.txt  run_06.txt  run_07.txt  run_08.txt  run_09.txt  run_10.txt
scenarios/scenario1/experiments/results/20hz/2026-04-16_16:42:34/S2_cache/: run_01.txt  (+9 more)
scenarios/scenario1/hi/: CMakeLists.txt  speedometer.c
scenarios/scenario1/li/: CMakeLists.txt  cpu_workload.c  io_workload.c  li_speedometer.c  memory_workload.c  misbehaving_app.c  speedometer_trigger.c  stress_workload.c
scenarios/scenario2/: CMakeLists.txt
scenarios/scenario2/common/: common.h
scenarios/scenario2/experiments/: s2_orchestrator.sh  s2_plots.py
scenarios/scenario2/hi/: CMakeLists.txt  shm_echo.c
scenarios/scenario2/hicom/: CMakeLists.txt  CMakePresets.json  hi_config_root.sh
scenarios/scenario2/hicom/common/: common.h
scenarios/scenario2/hicom/hi/: CMakeLists.txt  hi_shm_echo.c  hi_shm_ping.c  shm_echo_hi.c  shm_ping_hi.c
scenarios/scenario2/hicom/li/: CMakeLists.txt  shm_trigger.c
scenarios/scenario2/li/: CMakeLists.txt  shm_client.c
scenarios/scenario2/proxycom/: CMakePresets.json
scenarios/scenario2/proxycom/li/: shm_client.c
scenarios/scenario3/: CMakeLists.txt  CMakePresets.json  hi_config_root.sh
scenarios/scenario3/common/: common.h
scenarios/scenario3/experiments/: s3_orchestrator.sh  s3_orchestrator_tcp.sh  s3_plots.py
scenarios/scenario3/hi/: CMakeLists.txt  hi_net_receiver.c  net_echo.c  net_sender.c  net_sender_tcp.c
scenarios/scenario3/hicom_variant/: CMakeLists.txt  CMakePresets.json  hi_config_root.sh
scenarios/scenario3/hicom_variant/common/: common.h
scenarios/scenario3/hicom_variant/hi/: CMakeLists.txt  hi_net_echo.c  hi_net_ping.c
scenarios/scenario3/hicom_variant/li/: CMakeLists.txt  net_trigger.c
scenarios/scenario3/li/: CMakeLists.txt  li_net_sender.c  net_client.c  net_flood.c  net_receiver.c  net_receiver_tcp.c
(+4058 files in other folders)
